Changes from 0.9.9 release:   - Added support for multiple browser windows   - Added support for popup windows   - Added main application menu   - Moved bookmarks menu to main application menu   - Added StartOWB tool displaying splash window while OWB is starting     (logo created by mihcaels, thanks man!)   - Replaced text search window with search panel   - Fixed bug #69: Can't login on www.vcast.it. It say that cookies are not     active on the browser   - Fixed bug #81: After sending a private message on AROS-Exec, the links     on the new pages are not working   - Fixed bug #85: Long bookmarks are cut   - Fixed bug #88: Reloading AROS-Exec causes it to look weird   - Fixed bug #91: Problem with cookies from www.ppa.pl   - Updated OWB source code to revision 1097
git-svn-id: https://svn.aros.org/svn/aros/trunk@31919 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/Networking/Apps/OWB/README
+++ b/contrib/Networking/Apps/OWB/README
@@ -1,4 +1,4 @@
-OWB 0.9.8 for AROS
+OWB 0.9.9 for AROS
 
 INTRODUCTION
 
@@ -73,6 +73,7 @@ ctrl+c or amiga+c - copy
 ctrl+x or amiga+x - cut
 ctrl+v or amiga+v - paste
 ctrl+t - open new tab
+ctrl+n - open new window
 ctrl+w - close active tab
 
 TROUBLESHOOTING
@@ -113,15 +114,36 @@ See Licenses directory for more details.
 
 HISTORY
 
+OWB 0.9.9 (24.10.2009)
+  - Added support for multiple browser windows
+  - Added support for popup windows
+  - Added main application menu
+  - Moved bookmarks menu to main application menu
+  - Added StartOWB tool displaying splash window while OWB is starting
+    (logo created by mihcaels, thanks man!)
+  - Replaced text search window with search panel
+  - Fixed bug #69: Can't login on www.vcast.it. It say that cookies are not
+    active on the browser
+  - Fixed bug #81: After sending a private message on AROS-Exec, the links
+    on the new pages are not working
+  - Fixed bug #85: Long bookmarks are cut
+  - Fixed bug #88: Reloading AROS-Exec causes it to look weird
+  - Fixed bug #91: Problem with cookies from www.ppa.pl
+  - Updated OWB source code to revision 1097
+
 OWB 0.9.8 (28.06.2009)
   - Implemented download speed indicator
   - Added HTTP proxy settings
   - Fixed bug #48: Can't send messages on imo.im
-  - Fixed bug #70: Blocked mouse wheel and text area forms when using bookmarks
+  - Fixed bug #70: Blocked mouse wheel and text area forms when using 
+    bookmarks
   - Fixed bug #73: OWB doesn't run from DVD anymore
-  - Fixed bug #65: OWB doesn't display all select options when an empty option is present
-  - Fixed bug #77: Caret is still blinking in deactivated text editor fields causing confusion
-  - Fixed bug #79: OWB crashes on exit after cancelling file download started from menu
+  - Fixed bug #65: OWB doesn't display all select options when an empty option
+    is present
+  - Fixed bug #77: Caret is still blinking in deactivated text editor fields
+    causing confusion
+  - Fixed bug #79: OWB crashes on exit after cancelling file download started
+    from menu
 
 OWB 0.9.7 (21.06.2009)
   - Implemented remaining keyboard shortcuts from feature request #9:
