--- a/contrib/scout/source/ChangeLog
+++ b/contrib/scout/source/ChangeLog
@@ -2,8 +2,11 @@
 Scout Open Source - ChangeLog
 -----------------------------
 
-$Id: ChangeLog,v 1.147 2009/11/05 19:56:04 marust Exp $
-$Source: /cvsroot/scoutos/scoutos/source/ChangeLog,v $
+$Id: ChangeLog,v 1.148 2010/04/10 11:40:52 henes Exp $
+$Source: /cvsroot-fuse/scoutos/scoutos/source/ChangeLog,v $
+
+2010-04-10  Nicolas Sallin <henes@biclodon.com>
+  * Misc fixes for MorphOS build.
 
 2009-11-05  Matthias Rustler <mrustler@gmx.de>
   * Replaced AROS makefiles by metamakefiles.
